// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error page page renders and matches snapshot 1`] = `
"<html data-reactroot=\\"\\">
  <head></head>
  <body>
    <div id=\\"__next\\">
      <main class=\\"relative text-body bg-white\\" id=\\"main\\">
        <div
          class=\\"
            flex
            items-center
            border-s-10 border-neon-pink
            shadow-404title
            rounded
            h-32
            mt-6
            md:mt-12
            mx-2
            md:px-6 md:mx-auto md:max-w-4xl
          \\"
        >
          <span class=\\"flex-none px-4 text-h2 md:text-h1xl font-bold\\">500</span>
          <h1 class=\\"flex-grow text-body md:text-body-large md:ms-6 lg:ms-12\\">
            Sivustolla tapahtui virhe<span
              class=\\"hidden md:block text-body md:text-body-large\\"
              >Lataa sivu uudestaan</span
            >
          </h1>
        </div>
        <div
          class=\\"
            lg:grid
            md:grid-rows-6 md:grid-flow-col md:gap-y-8 md:gap-x-32
            mt-8
            md:mt-16
            mb-8
            md:mb-16
            mx-2
            md:px-6 md:mx-auto md:max-w-4xl
          \\"
        >
          <p class=\\"block md:hidden mb-8 text-body-small\\">
            Lataa sivu uudestaan
          </p>
          <div lang=\\"sv\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">
              Det har uppstått ett fel på webbplatsen
            </p>
            <p class=\\"text-body-small\\">Ladda om sidan</p>
          </div>
          <div lang=\\"en\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">Something went wrong</p>
            <p class=\\"text-body-small\\">Try to refresh the page</p>
          </div>
          <div lang=\\"ru\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">Перезагрузить страницу</p>
            <p class=\\"text-body-small\\">Перейти к содержанию</p>
          </div>
          <div lang=\\"et\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">Saidil ilmnes viga</p>
            <p class=\\"text-body-small\\">Laadi leht uuesti</p>
          </div>
          <div lang=\\"fr\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">
              Une erreur s’est produite sur la page
            </p>
            <p class=\\"text-body-small\\">Télécharger à nouveau la page</p>
          </div>
          <div lang=\\"so\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">Khalad baa bogga ka dhacay</p>
            <p class=\\"text-body-small\\">Markale dib u soo kici bogga</p>
          </div>
          <div lang=\\"es\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">
              Se ha producido un error en el portal
            </p>
            <p class=\\"text-body-small\\">Recargue la página.</p>
          </div>
          <div lang=\\"tr\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">Sayfada hata oluştu</p>
            <p class=\\"text-body-small\\">Sayfayı yeniden yükleyin</p>
          </div>
          <div lang=\\"zh\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
            <p class=\\"text-body-small font-bold\\">网站出现错误</p>
            <p class=\\"text-body-small\\">重新载入页面</p>
          </div>
          <div lang=\\"fa\\" class=\\"mb-8 lg:mb-0\\" dir=\\"rtl\\">
            <p class=\\"text-body-small font-bold\\">در صفحات خطا پیش آمد</p>
            <p class=\\"text-body-small\\">این صفحه را دو باره بارگذاری کنید</p>
          </div>
          <div lang=\\"ar\\" class=\\"mb-8 lg:mb-0\\" dir=\\"rtl\\">
            <p class=\\"text-body-small font-bold\\">
              این صفحه را دو باره بارگذاری کنید
            </p>
            <p class=\\"text-body-small\\">حمّل الصفحة من جديد</p>
          </div>
        </div>
      </main>
      <section
        class=\\"
          sticky
          bottom-0
          items-center
          px-6
          lg:px-16
          pt-6
          lg:pt-12
          text-center
          lg:text-left
          bg-white
          rounded-t
          shadow-bottom-bar
          min-bottom-bar
          lg:rounded-none
        \\"
      >
        <h2 class=\\"mb-4 text-body-large font-bold\\">
          infoFinland.fi käyttää evästeitä
        </h2>
        <div class=\\"lg:flex lg:gap-12 pb-6 max-w-topbar\\">
          <div class=\\"lg:w-1/2\\">
            <p class=\\"mb-8 text-action lg:text-body\\">
              Tämä sivusto käyttää välttämättömiä evästeitä suorituskyvyn
              varmistamiseksi sekä yleisen käytön seurantaan. Lisäksi käytämme
              kohdennusevästeitä käyttäjäkokemuksen parantamiseksi.
            </p>
          </div>
          <div class=\\"gap-4 justify-items-center items-center\\">
            <button
              class=\\"ifu-button block md:inline-block mx-auto mb-4 md:me-4\\"
            >
              Vain välttämättömät</button
            ><button
              class=\\"ifu-button block md:inline-block mx-auto mb-4 md:me-12\\"
            >
              Hyväksy kaikki evästeet</button
            ><a
              class=\\"font-bold text-black underline\\"
              href=\\"/about/cookie-settings\\"
              >Evästeasetukset</a
            >
          </div>
        </div>
      </section>
    </div>
  </body>
</html>
"
`;

exports[`Error page page renders and matches snapshot 2`] = `
"<div id=\\"__next\\">
  <main class=\\"relative text-body bg-white\\" id=\\"main\\">
    <div
      class=\\"
        flex
        items-center
        border-s-10 border-neon-pink
        shadow-404title
        rounded
        h-32
        mt-6
        md:mt-12
        mx-2
        md:px-6 md:mx-auto md:max-w-4xl
      \\"
    >
      <span class=\\"flex-none px-4 text-h2 md:text-h1xl font-bold\\">500</span>
      <h1 class=\\"flex-grow text-body md:text-body-large md:ms-6 lg:ms-12\\">
        Sivustolla tapahtui virhe<span
          class=\\"hidden md:block text-body md:text-body-large\\"
          >Lataa sivu uudestaan</span
        >
      </h1>
    </div>
    <div
      class=\\"
        lg:grid
        md:grid-rows-6 md:grid-flow-col md:gap-y-8 md:gap-x-32
        mt-8
        md:mt-16
        mb-8
        md:mb-16
        mx-2
        md:px-6 md:mx-auto md:max-w-4xl
      \\"
    >
      <p class=\\"block md:hidden mb-8 text-body-small\\">Lataa sivu uudestaan</p>
      <div lang=\\"sv\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">
          Det har uppstått ett fel på webbplatsen
        </p>
        <p class=\\"text-body-small\\">Ladda om sidan</p>
      </div>
      <div lang=\\"en\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">Something went wrong</p>
        <p class=\\"text-body-small\\">Try to refresh the page</p>
      </div>
      <div lang=\\"ru\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">Перезагрузить страницу</p>
        <p class=\\"text-body-small\\">Перейти к содержанию</p>
      </div>
      <div lang=\\"et\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">Saidil ilmnes viga</p>
        <p class=\\"text-body-small\\">Laadi leht uuesti</p>
      </div>
      <div lang=\\"fr\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">
          Une erreur s’est produite sur la page
        </p>
        <p class=\\"text-body-small\\">Télécharger à nouveau la page</p>
      </div>
      <div lang=\\"so\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">Khalad baa bogga ka dhacay</p>
        <p class=\\"text-body-small\\">Markale dib u soo kici bogga</p>
      </div>
      <div lang=\\"es\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">
          Se ha producido un error en el portal
        </p>
        <p class=\\"text-body-small\\">Recargue la página.</p>
      </div>
      <div lang=\\"tr\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">Sayfada hata oluştu</p>
        <p class=\\"text-body-small\\">Sayfayı yeniden yükleyin</p>
      </div>
      <div lang=\\"zh\\" class=\\"mb-8 lg:mb-0\\" dir=\\"ltr\\">
        <p class=\\"text-body-small font-bold\\">网站出现错误</p>
        <p class=\\"text-body-small\\">重新载入页面</p>
      </div>
      <div lang=\\"fa\\" class=\\"mb-8 lg:mb-0\\" dir=\\"rtl\\">
        <p class=\\"text-body-small font-bold\\">در صفحات خطا پیش آمد</p>
        <p class=\\"text-body-small\\">این صفحه را دو باره بارگذاری کنید</p>
      </div>
      <div lang=\\"ar\\" class=\\"mb-8 lg:mb-0\\" dir=\\"rtl\\">
        <p class=\\"text-body-small font-bold\\">
          این صفحه را دو باره بارگذاری کنید
        </p>
        <p class=\\"text-body-small\\">حمّل الصفحة من جديد</p>
      </div>
    </div>
  </main>
  <section
    class=\\"
      sticky
      bottom-0
      items-center
      px-6
      lg:px-16
      pt-6
      lg:pt-12
      text-center
      lg:text-left
      bg-white
      rounded-t
      shadow-bottom-bar
      min-bottom-bar
      lg:rounded-none
      ifu-cookies__banner--appear ifu-cookies__banner--appear-active
    \\"
  >
    <h2 class=\\"mb-4 text-body-large font-bold\\">
      infoFinland.fi käyttää evästeitä
    </h2>
    <div class=\\"lg:flex lg:gap-12 pb-6 max-w-topbar\\">
      <div class=\\"lg:w-1/2\\">
        <p class=\\"mb-8 text-action lg:text-body\\">
          Tämä sivusto käyttää välttämättömiä evästeitä suorituskyvyn
          varmistamiseksi sekä yleisen käytön seurantaan. Lisäksi käytämme
          kohdennusevästeitä käyttäjäkokemuksen parantamiseksi.
        </p>
      </div>
      <div class=\\"gap-4 justify-items-center items-center\\">
        <button class=\\"ifu-button block md:inline-block mx-auto mb-4 md:me-4\\">
          Vain välttämättömät</button
        ><button class=\\"ifu-button block md:inline-block mx-auto mb-4 md:me-12\\">
          Hyväksy kaikki evästeet</button
        ><a class=\\"font-bold text-black underline\\" href=\\"/about/cookie-settings\\"
          >Evästeasetukset</a
        >
      </div>
    </div>
  </section>
</div>
"
`;
